add log detail
